add: event service and link up login
