# docs/swagger.yaml
@@ -45,6 +45,8 @@ definitions:
         type: string
       apiKey:
         type: string
+      eventId:
+        type: string
       expiresAt:
         type: string
       userId:
@@ -54,7 +56,7 @@ definitions:
     properties:
       _id:
         type: string
-      created:
+      createdAt:
         type: string
       password:
         type: string
@@ -174,7 +176,7 @@ paths:
       - user
 securityDefinitions:
   WithToken:
-    description: token gerneated by the login endpoint
+    description: token generated by the login endpoint
     in: header
     name: x-access-token
     type: apiKey
